rewrite update checker